Updated package.json for Heroku with server.js and sqlite3 build

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "npm install",
-    "preinstall": "npm install --build-from-source sqlite3"
+    "heroku-postbuild": "npm install --build-from-source sqlite3"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -21,6 +21,7 @@
     "@mapbox/node-pre-gyp": "^1.0.11"
   },
   "engines": {
-    "node": "20.x"
+    "node": "20.x",
+    "npm": ">=8.0.0"
   }
 }
