--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "npm install",
-    "heroku-postbuild": "npm install --build-from-source sqlite3"
+    "preinstall": "npm install --build-from-source sqlite3"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
